<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Base exam 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">TODO</string>
    <string name="favorite">Favorite</string>
    <string name="user">User</string>
    <string name="news">News</string>
    <string name="fragment_home">Fragment Home</string>
    <string name="fragment_user">Fragment User</string>
    <string name="fragment_favorite">Fragment Favorite</string>
    <string name="ngel_victoriano">Ángel Victoriano</string>
    <string name="gmail">Gmail: angeljosevictoriano@gmail.com</string>
    <string name="numero" tools:ignore="TypographyDashes">Celular: 829-598-0475</string>

    <string name="n_mero_1">Número 1</string>
    <string name="n_mero_2">Número 2</string>
    <string name="n_mero_3">Número 3</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado:</string>
    <string name="mayor">Mayor:</string>
    <string name="menor">Menor:</string>
    <string name="promedio">Promedio:</string>
    <string name="introduce_un_n_mero">Introduce un número</string>
</resources>