<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itHome"
        android:title="@string/Home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/itFavorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_favorite_24"/>
    <item
        android:id="@+id/itUser"
        android:title="@string/user"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_supervised_user_circle_24"/>
    <item
        android:id="@+id/itNews"
        android:title="@string/news"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_supervised_user_circle_24"/>

</menu>